--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,47 @@
 /*  your css code here. If applicable */
+.box{
+	background-color: #f5f5f5;
+	padding: 50px;
+	width: 500px;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+#image{
+	align-content: center;
+}
+img {
+	width: 100%;
+}
+h1{
+	text-align: center;
+	margin-bottom: 0;
+}
+
+p{
+	text-align: center;
+	font-size: 20px;
+	margin: 0;
+}
+
+button{
+	width: 100px;
+	height: 50px;
+	background-color: rgb(228, 100, 100);
+	border-radius: 10px;
+	font-size: 20px;
+	color: white;
+	border: none;
+	margin-top: 10px;
+	padding: 5px;
+	margin-left: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
